--- a/1. JavaScript Drum Kit/vanila/index-START.html
+++ b/1. JavaScript Drum Kit/vanila/index-START.html
@@ -58,7 +58,23 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+    window.addEventListener('keypress', (e) => {
+        const keys = document.querySelectorAll('.key');
 
+        keys.forEach(key => {
+            key.classList.remove('drum-kit');
+
+           if (key.querySelector('kbd').textContent == e.key.toUpperCase()) {
+                key.classList.add('drum-kit');
+
+                const dataKey = key.getAttribute('data-key');
+
+                const audio = document.querySelector(`audio[data-key='${dataKey}']`);
+
+                audio.play();
+            }
+        });
+    })
 </script>
 
 
