--- a/1. JavaScript Drum Kit/index-Improve.html
+++ b/1. JavaScript Drum Kit/index-Improve.html
@@ -48,25 +48,26 @@
   </div>
 
 <script>
-    window.addEventListener('keypress', (e) => {
-        const keys = document.querySelectorAll('.key');
+    window.addEventListener('keydown', (e) => {
+        const playedKey = document.querySelector('.playing');
 
-        keys.forEach(key => {
-            key.classList.remove('drum-kit');
+        if (playedKey) {
+            playedKey.classList.remove('playing')
+        }
 
-           if (key.querySelector('kbd').textContent == e.key.toUpperCase()) {
-                key.classList.add('drum-kit');
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
 
-                const audioName = key.querySelector('span.sound').textContent;
+        if (!key) return;
 
-                const audio = new Audio(`sounds/${audioName}.wav`)
+        key.classList.add('playing');
 
-                audio.play();
-            }
-        });
+        const audioName = key.querySelector('span.sound').textContent;
+
+        const audio = new Audio(`sounds/${audioName}.wav`)
+
+        audio.play();
     })
 </script>
-
 
 </body>
 </html>
